--- a/index.html
+++ b/index.html
@@ -153,98 +153,107 @@
             <div id="containerFaktaAlgrent">
                 <div class="faktaRutor">
                     <div class="faqItem">
-                    <div class="headerFaktaRutor">Fakta & Säkerhetsblad</div>
-                    <div class="faktaBrödTxt">En produkt för effektiv sanering av alger, lavar och mögel.
-                        Algrent är optimerad för att effektivt ta bort lättare påväxt som alger och lavar.</div>
-                    <div class="dropDownFact">
-                        <div>Läs mer om fakta </div>
-                        <div class="faqIcon">+</div>
-                    </div>
-                    <div class="faqAnswer">
-                        Blandningen kan användas på de flesta material som, trä, betong, sten, tegel, puts, plast, plåt,
-                        tyg, takpapp, etternit och kompositmaterial.
+                        <div class="headerFaktaRutor">Fakta & Säkerhetsblad</div>
+                        <div class="faktaBrödTxt">En produkt för effektiv sanering av alger, lavar och mögel.
+                            Algrent är optimerad för att effektivt ta bort lättare påväxt som alger och lavar.</div>
+                        <div class="dropDownFact">
+                            <div>Läs mer om fakta </div>
+                            <div class="faqIcon">+</div>
+                        </div>
+                        <div class="faqAnswer">
+                            Blandningen kan användas på de flesta material som, trä, betong, sten, tegel, puts, plast,
+                            plåt,
+                            tyg, takpapp, etternit och kompositmaterial.
 
-                        För att applicera blandningen kan lågtryckspruta, borste, pensel eller roller användas.
+                            För att applicera blandningen kan lågtryckspruta, borste, pensel eller roller användas.
 
-                        Bleker eller påverkar ej ytor som blandningen appliceras på. Vid hög glans på ytan rekommenderas
-                        att
-                        ytan sköljs av efter max 12 timmar, pga. blandningen kan matta ytan.
+                            Bleker eller påverkar ej ytor som blandningen appliceras på. Vid hög glans på ytan
+                            rekommenderas
+                            att
+                            ytan sköljs av efter max 12 timmar, pga. blandningen kan matta ytan.
 
-                        Rekommendationen är att blandningen appliceras då yttertemperaturen är mellan 0 och 25 grader
-                        samt
-                        att det är regnfritt under 12 timmar efter applicering.
+                            Rekommendationen är att blandningen appliceras då yttertemperaturen är mellan 0 och 25
+                            grader
+                            samt
+                            att det är regnfritt under 12 timmar efter applicering.
+                        </div>
                     </div>
                 </div>
-            </div>
 
                 <div class="faktaRutor">
                     <div class="faqItem">
-                    <div class="headerFaktaRutor">Handledning & Åtgång</div>
-                    <div class="faktaBrödTxt">Ytan som du ska behandla ska vara torr och större regnmängder ska inte
-                        förväntas de närmaste 12
-                        timmarna. Rekommenderad yttertemperatur är mellan 0 och 25 grader, för att ALGRENT inte ska
-                        avdunsta för snabbt.</div>
-                    <div class="dropDownFact">
-                        <div>Läs mer om handledning</div>
-                        <div class="faqIcon">+</div>
-                    </div>
-                    <div class="faqAnswer">
-                        Utförande
-                        <br>
-                        1.Späds 1 del ALGRENT + 15 delar vatten vid normal behandling. För svår påväxt som svartmögel
-                        och
-                        stenpest rekommenderas produkten ALGRENT PROFFS.
-                        <br>
-                        2. Applicera blandningen på ytan med lågtryckspruta, borste, pensel eller roller så att det
-                        rinna
-                        lätt från ytan.
-                        <br>
-                        3. Efter 12 timmar har blandningen verkat klart och trängt ner i ytans porer. Påväxten är nu
-                        död.
-                        <br>
-                        3b. Om ytan har hög glans, rekommenderar vi att man spola av ytan efter 12 timmar, eftersom
-                        annars
-                        finns risk för att ytan mattas något.
-                        <br>
-                        4. Nu är allt klart. Väder och vind kommer spola bort den döda påväxten så småningom. Påväxt som
-                        mossa och lavar kan ta upp till 1 år innan regnet spolar bort den.
-                        <br>
-                        4b. Vill du få bort den döda påväxten tidigare, kan du spola av den behandlade ytan med vatten
-                        (trädgårdslang eller högtryckstvätt). Vänta då minst 48h efter behandlingen att göra detta.
+                        <div class="headerFaktaRutor">Handledning & Åtgång</div>
+                        <div class="faktaBrödTxt">Ytan som du ska behandla ska vara torr och större regnmängder ska inte
+                            förväntas de närmaste 12
+                            timmarna. Rekommenderad yttertemperatur är mellan 0 och 25 grader, för att ALGRENT inte ska
+                            avdunsta för snabbt.</div>
+                        <div class="dropDownFact">
+                            <div>Läs mer om handledning</div>
+                            <div class="faqIcon">+</div>
+                        </div>
+                        <div class="faqAnswer">
+                            Utförande
+                            <br>
+                            1.Späds 1 del ALGRENT + 15 delar vatten vid normal behandling. För svår påväxt som
+                            svartmögel
+                            och
+                            stenpest rekommenderas produkten ALGRENT PROFFS.
+                            <br>
+                            2. Applicera blandningen på ytan med lågtryckspruta, borste, pensel eller roller så att det
+                            rinna
+                            lätt från ytan.
+                            <br>
+                            3. Efter 12 timmar har blandningen verkat klart och trängt ner i ytans porer. Påväxten är nu
+                            död.
+                            <br>
+                            3b. Om ytan har hög glans, rekommenderar vi att man spola av ytan efter 12 timmar, eftersom
+                            annars
+                            finns risk för att ytan mattas något.
+                            <br>
+                            4. Nu är allt klart. Väder och vind kommer spola bort den döda påväxten så småningom. Påväxt
+                            som
+                            mossa och lavar kan ta upp till 1 år innan regnet spolar bort den.
+                            <br>
+                            4b. Vill du få bort den döda påväxten tidigare, kan du spola av den behandlade ytan med
+                            vatten
+                            (trädgårdslang eller högtryckstvätt). Vänta då minst 48h efter behandlingen att göra detta.
+                        </div>
                     </div>
                 </div>
-            </div>
 
                 <div class="faktaRutor">
                     <div class="faqItem">
-                    <div class="headerFaktaRutor">Hur hjälper Algrent dig?</div>
-                    <div class="faktaBrödTxt">Algrent innehåller Bensaltensid. Detta verksamma ämne är mycket
-                        effektivt
-                        för att neutralisera
-                        påväxt som alger och lavar. Produkten är biologiskt nedbrytbar och påverkar inte materialet
-                        eller bleker ytan.</div>
-                    <div class="dropDownFact">
-                        <div>Läs mer om Algrent</div>
-                        <div class="faqIcon">+</div>
-                    </div>
-                    <div class="faqAnswer">
-                        En produkt för effektiv sanering av alger, lavar och mögel.
-                        ALGRENT är optimerad för att effektivt ta bort lättare påväxt som alger och lavar.
-                        <br>
-                        Lika effektiv mot påväxt som marknadsledande produkt. Men 63% billigare.
-                        ALGRENT ger en 1% lösning av bensaltensid vid rekommenderad blandning precis som marknadsledande
-                        produkt. Eftersom produkten är högkoncentrerad har du möjlighet att optimera den ytterliga vid
-                        mer
-                        koncentrerad påväxt.
-                        <br>
-                        Långtidsverkande mot ny påväxt i upp till 5 år.
-                        ALGRENT tränger ner i ytans porer och neutraliserar påväxten på djupet. Detta ger ett skydd mot
-                        att
-                        ny påväxt blir synlig i upp till 5 år.
+                        <div class="headerFaktaRutor">Hur hjälper Algrent dig?</div>
+                        <div class="faktaBrödTxt">Algrent innehåller Bensaltensid. Detta verksamma ämne är mycket
+                            effektivt
+                            för att neutralisera
+                            påväxt som alger och lavar. Produkten är biologiskt nedbrytbar och påverkar inte materialet
+                            eller bleker ytan.</div>
+                        <div class="dropDownFact">
+                            <div>Läs mer om Algrent</div>
+                            <div class="faqIcon">+</div>
+                        </div>
+                        <div class="faqAnswer">
+                            En produkt för effektiv sanering av alger, lavar och mögel.
+                            ALGRENT är optimerad för att effektivt ta bort lättare påväxt som alger och lavar.
+                            <br>
+                            Lika effektiv mot påväxt som marknadsledande produkt. Men 63% billigare.
+                            ALGRENT ger en 1% lösning av bensaltensid vid rekommenderad blandning precis som
+                            marknadsledande
+                            produkt. Eftersom produkten är högkoncentrerad har du möjlighet att optimera den ytterliga
+                            vid
+                            mer
+                            koncentrerad påväxt.
+                            <br>
+                            Långtidsverkande mot ny påväxt i upp till 5 år.
+                            ALGRENT tränger ner i ytans porer och neutraliserar påväxten på djupet. Detta ger ett skydd
+                            mot
+                            att
+                            ny påväxt blir synlig i upp till 5 år.
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
 
             <div class="containerInfo">
                 <div class="containerTxt">
@@ -257,7 +266,6 @@
                         Algrent kan användas på impregnerat, omålat, målat eller oljat trä. Men även hårdträ (exempelvis
                         Bangkirai och Teak), Thermowood och lärk och träkomposit.
                     </div>
-                    <div class="läsMer">Läs mer →</div>
                 </div>
 
                 <div class="MellanstoraBilder">
@@ -278,7 +286,6 @@
                         <br>
                         Algrent kan användas på markisdukar i bomull, polyester och akryl.
                     </div>
-                    <div class="läsMer">Varför Algrent →</div>
                 </div>
 
             </div>
@@ -287,10 +294,10 @@
                 <div class="containerTxt">
                     <div class="SemiheaderFPage">Algrent tar bort alger på din fasad.</div>
                     <div class="brödTxt">Algrent är mycket effektivt mot gröna alger på fasaden. Har du problem
-                        med rödalger eller svartmögel rekommenderar vi ALGRENT PROFFS som är en starkare produkt.
-                          <br>
-                        Produkten kan användas på målad och omålad träfasad samt tegel- och puts fasad.</div>
-                    <div class="läsMer">Läs Här → </div>
+                        med rödalger eller svartmögel rekommenderar vi ALGRENT PROFFS som är en starkare produkt.
+                        <br>
+                        Produkten kan användas på målad och omålad träfasad samt tegel- och puts fasad.
+                    </div>
                 </div>
 
                 <div class="MellanstoraBilder">
@@ -320,8 +327,9 @@
                     <div class="SemiheaderFPage">Algrent får ditt båtkapell rent.</div>
                     <div class="brödTxt">Algrent tar effektivt bort alger och mögel på ditt båtkapell. Eftersom medlet
                         trängen ner i väven och neutraliserar påväxten på djupet får du ett rent kapell under många år.
-                         <br>
-                        Produkten kan användas både på kapell i akryl- och bomullsväv.</div>
+                        <br>
+                        Produkten kan användas både på kapell i akryl- och bomullsväv.
+                    </div>
                 </div>
 
                 <div class="MellanstoraBilder">
