--- a/index.html
+++ b/index.html
@@ -153,33 +153,29 @@
             <div id="containerFaktaAlgrent">
                 <div class="faktaRutor">
                     <div class="faqItem">
-                        <div class="headerFaktaRutor">Fakta & Säkerhetsblad</div>
-                        <div class="faktaBrödTxt">En produkt för effektiv sanering av alger, lavar och mögel.
-                            Algrent är optimerad för att effektivt ta bort lättare påväxt som alger och lavar.</div>
-                        <div class="dropDownFact">
-                            <div>Läs mer om fakta </div>
-                            <div class="faqIcon">+</div>
+                        <!-- Vänsterkolumn -->
+                        <div class="faqContentLeft">
+                            <div class="headerFaktaRutor">Fakta & Säkerhetsblad</div>
+                            <div class="faktaBrödTxt">
+                                En produkt för effektiv sanering av alger, lavar och mögel.
+                                Algrent är optimerad för att effektivt ta bort lättare påväxt som alger och lavar.
+                            </div>
+                            <div class="dropDownFact">
+                                <div>Läs mer om fakta</div>
+                                <div class="faqIcon">+</div>
+                            </div>
                         </div>
+
+                        <!-- Högerkolumn -->
                         <div class="faqAnswer">
-                            Blandningen kan användas på de flesta material som, trä, betong, sten, tegel, puts, plast,
-                            plåt,
-                            tyg, takpapp, etternit och kompositmaterial.
-
+                            Blandningen kan användas på de flesta material som trä, betong, sten, tegel, puts,
+                            plast, plåt, tyg, takpapp, etternit och kompositmaterial. <br><br>
                             För att applicera blandningen kan lågtryckspruta, borste, pensel eller roller användas.
-
-                            Bleker eller påverkar ej ytor som blandningen appliceras på. Vid hög glans på ytan
-                            rekommenderas
-                            att
-                            ytan sköljs av efter max 12 timmar, pga. blandningen kan matta ytan.
-
-                            Rekommendationen är att blandningen appliceras då yttertemperaturen är mellan 0 och 25
-                            grader
-                            samt
-                            att det är regnfritt under 12 timmar efter applicering.
+                            <br><br>
+                            Bleker eller påverkar ej ytor som blandningen appliceras på...
                         </div>
                     </div>
                 </div>
-
                 <div class="faktaRutor">
                     <div class="faqItem">
                         <div class="headerFaktaRutor">Handledning & Åtgång</div>
