--- a/index.html
+++ b/index.html
@@ -158,7 +158,8 @@
                             <div class="headerFaktaRutor">Fakta & Säkerhetsblad</div>
                             <div class="faktaBrödTxt">
                                 En produkt för effektiv sanering av alger, lavar och mögel.
-                                Algrent är optimerad för att effektivt ta bort lättare påväxt som alger och lavar.
+                                Algrent är optimerad för att effektivt ta bort lättare påväxt som alger och lavar. 
+                                 Genom en optimal dosering får du en effektiv rengöring som verkar i upp till 5 år, vilket spar både pengar, arbetstid samt vår miljö.
                             </div>
                             <div class="dropDownFact">
                                 <div>Läs mer om fakta</div>
