--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
             <div id="containerTopProdukt">
                 <div id="imgDiv">
-                    <img class="scroll-reveal" src="./img/algrentProdukt.png" alt="">
+                    <img class="scroll-reveal" src="./img/image0.jpeg" alt="">
                 </div>
                 <div id="TopRightDiv">
                     <div id="titelProduct">
