--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
         <a href="https://www.algrentb2b.com">
             <img src="../Algrent/img/logoAlgrent.webp" alt="" id="logoAlgrent">
         </a>
-        <div class="dropDown">
-            <div class="menuItem">
-                <div class="dropDownMenu" id="Form">Beställ</div>
-            </div>
+        <div class="menuItem">
+            <div class="dropDownMenu" id="Form">Beställ</div>
         </div>
     </header>
 
@@ -158,8 +156,9 @@
                             <div class="headerFaktaRutor">Fakta & Säkerhetsblad</div>
                             <div class="faktaBrödTxt">
                                 En produkt för effektiv sanering av alger, lavar och mögel.
-                                Algrent är optimerad för att effektivt ta bort lättare påväxt som alger och lavar. 
-                                 Genom en optimal dosering får du en effektiv rengöring som verkar i upp till 5 år, vilket spar både pengar, arbetstid samt vår miljö.
+                                Algrent är optimerad för att effektivt ta bort lättare påväxt som alger och lavar.
+                                Genom en optimal dosering får du en effektiv rengöring som verkar i upp till 5 år,
+                                vilket spar både pengar, arbetstid samt vår miljö.
                             </div>
                             <div class="dropDownFact">
                                 <div>Läs mer om fakta</div>
@@ -338,17 +337,17 @@
 
                 <div id="containerMidProdukt">
 
-                    
-                
-                <div>
-                    <h1>Säkerhet & nedladdningar</h1>
-                    <p>Se säkerhetsdatabladet för fullständiga anvisningar om hantering, förvaring och personlig
-                        skyddsutrustning.</p>
-                    <p>Hämta säkerhetsdatablad (PDF)</p>
-                </div>
 
+
+                    <div>
+                        <h1>Säkerhet & nedladdningar</h1>
+                        <p>Se säkerhetsdatabladet för fullständiga anvisningar om hantering, förvaring och personlig
+                            skyddsutrustning.</p>
+                        <p>Hämta säkerhetsdatablad (PDF)</p>
+                    </div>
+
+                </div>
             </div>
-        </div>
 
         </div>
     </main>
