--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
                                 rengöringsmedel.
                             </p>
                         </div>
+                        <button type=submit class="btn" onclick=" window.open('https://cdn.shopify.com/s/files/1/0545/1844/8311/files/Algrent_Proffs_Version_4.0.pdf?v=1734606491')"> Säkerhetsdatablad </button>
                     </div>
                 </div>
             </div>
