--- a/index.html
+++ b/index.html
@@ -144,7 +144,9 @@
                                 rengöringsmedel.
                             </p>
                         </div>
-                        <button type=submit class="btn" onclick=" window.open('https://cdn.shopify.com/s/files/1/0545/1844/8311/files/Algrent_Proffs_Version_4.0.pdf?v=1734606491')"> Säkerhetsdatablad </button>
+                        <button type=submit class="btn" id="SäkerhetsbladBTN"
+                            onclick=" window.open('https://cdn.shopify.com/s/files/1/0545/1844/8311/files/Algrent_Proffs_Version_4.0.pdf?v=1734606491')">
+                            Säkerhetsdatablad </button>
                     </div>
                 </div>
             </div>
@@ -336,18 +338,7 @@
 
             <div id="containerProdukt">
 
-                <div id="containerMidProdukt">
 
-
-
-                    <div>
-                        <h1>Säkerhet & nedladdningar</h1>
-                        <p>Se säkerhetsdatabladet för fullständiga anvisningar om hantering, förvaring och personlig
-                            skyddsutrustning.</p>
-                        <p>Hämta säkerhetsdatablad (PDF)</p>
-                    </div>
-
-                </div>
             </div>
 
         </div>
