--- a/index.html
+++ b/index.html
@@ -268,13 +268,13 @@
                 </div>
 
                 <div class="MellanstoraBilder">
-                    <img class="scroll-reveal" src="./img/frontPageDemo.png" alt="">
+                    <img class="scroll-reveal" src="./img/Tak_med_mossa_1_rektang.webp" alt="">
                 </div>
             </div>
 
             <div class="containerInfo">
                 <div class="MellanstoraBilder">
-                    <img class="scroll-reveal" src="./img/frontPageProduct.png" alt="">
+                    <img class="scroll-reveal" src="./img/fasad_jamforelse_rektang.webp" alt="">
                 </div>
 
                 <div class="containerTxt">
@@ -291,32 +291,28 @@
 
             <div class="containerInfo">
                 <div class="containerTxt">
-                    <div class="SemiheaderFPage">Algrent tar bort alger på din fasad.</div>
-                    <div class="brödTxt">Algrent är mycket effektivt mot gröna alger på fasaden. Har du problem
-                        med rödalger eller svartmögel rekommenderar vi ALGRENT PROFFS som är en starkare produkt.
-                        <br>
-                        Produkten kan användas på målad och omålad träfasad samt tegel- och puts fasad.
+                    <div class="SemiheaderFPage">Får dina stenplattor att se nylagda ut igen</div>
+                    <div class="brödTxt">ALGRENT PROFFS ta bort mossa, lavar och alger från dina stenplattor. Har du mycket vita fläckar, så kallad stenpest på dina stenplattor ordnar ALGRENT PROFFS även detta. 
+
+                        Produkten kan användas på marksten i betong, granit och skiffer, marktegel, natursten och granitkeramik.
                     </div>
                 </div>
 
                 <div class="MellanstoraBilder">
-                    <img class="scroll-reveal" src="./img/snubbe.png" alt="">
+                    <img class="scroll-reveal" src="./img/Marksten_10_rektang.webp" alt="">
                 </div>
             </div>
 
             <div class="containerInfo">
                 <div class="MellanstoraBilder">
-                    <img class="scroll-reveal" src="./img/frontPageProduct.png" alt="">
+                    <img class="scroll-reveal" src="./img/vindskiva_1_rektang.webp" alt="">
                 </div>
 
                 <div class="containerTxt">
-                    <div class="SemiheaderFPage">Rengör dina utemöbler på djupet.</div>
-                    <div class="brödTxt">Algrent är perfekt för att rengöra utemöbler och neutraliserar algerna i alla
-                        skrymslen. Bara spruta på blandningen och låt den verkar i 24 timmar. Spolar därefter av
-                        möblerna med en vattenslang.
-                        <br>
-                        Produkten kan användas på utemöbler i trä, rotting, plast, metall samt olika typer av
-                        teakmaterial. Fungera både på obehandlad, oljebehandlade eller målade utemöbler.
+                    <div class="SemiheaderFPage">Dina vindskivor och snickerier kommer bli vita igen</div>
+                    <div class="brödTxt">Svartmögel är den vanligaste påväxten på vindskivor och snickerier. Sitter svartmöglet länge, ”kryper” det in i färgskiktet och är svårt att få bort. Men med ALGRENT PROFFS tar effektivt bort svartmöglet. 
+
+                        Du kan använda produkten på målat och omålat trä, målad plåt och plast.
                     </div>
                 </div>
             </div>
