--- a/index.html
+++ b/index.html
@@ -256,14 +256,12 @@
 
             <div class="containerInfo">
                 <div class="containerTxt">
-                    <div class="SemiheaderFPage">Algrent tar enkelt bort alger på din altan</div>
+                    <div class="SemiheaderFPage">Ta bort mossa på tak</div>
                     <div class="brödTxt">
-                        Algrent är mycket effektiv på att tränga ner i träets porer och ta bort alger på djupet. Du får
-                        en altan som håller sig fri från alger i upp till 5 år. Om du har problem med svartmögel på ditt
-                        trädäck rekommenderar vi ALGRENT PROFFS som är en starkare produkt.
+                        ALGRENT PROFFS är mycket effektiv på att tränga ner i takpannans porer och neutralisera mossans
+                        rötter. Du får ett mossfritt tak under många år.
                         <br>
-                        Algrent kan användas på impregnerat, omålat, målat eller oljat trä. Men även hårdträ (exempelvis
-                        Bangkirai och Teak), Thermowood och lärk och träkomposit.
+                        Medlet fungerar på tegel- och betongpannor, takpapp, eternitplattor, kanalplast och plåttak
                     </div>
                 </div>
 
@@ -278,12 +276,11 @@
                 </div>
 
                 <div class="containerTxt">
-                    <div class="SemiheaderFPage">Förläng livslängden på din Markis</div>
-                    <div class="brödTxt">Alger och svartmögel försvagar markistyget. Med ALGRENT tar du enkelt bort
-                        alger och mögel, och får ett skydd mot ny påväxt under många år. Dessutom kommer markisen se som
-                        ny ut igen.
+                    <div class="SemiheaderFPage">Enkelt att rengöra din fasad med ALGRENT</div>
+                    <div class="brödTxt">ALGRENT är mycket effektivt mot gröna alger på fasaden. Har du problem med
+                        rödalger eller svartmögel rekommenderar vi ALGRENT PROFFS som är en starkare produkt.
                         <br>
-                        Algrent kan användas på markisdukar i bomull, polyester och akryl.
+                        Produkten kan användas på målad och omålad träfasad samt tegel- och puts fasad.
                     </div>
                 </div>
 
@@ -291,11 +288,12 @@
 
             <div class="containerInfo">
                 <div class="containerTxt">
-                    <div class="SemiheaderFPage">Algrent tar bort alger på din fasad.</div>
-                    <div class="brödTxt">Algrent är mycket effektivt mot gröna alger på fasaden. Har du problem
-                        med rödalger eller svartmögel rekommenderar vi ALGRENT PROFFS som är en starkare produkt.
+                    <div class="SemiheaderFPage">Får dina stenplattor att se nylagda ut igen</div>
+                    <div class="brödTxt">ALGRENT PROFFS ta bort mossa, lavar och alger från dina stenplattor. Har du
+                        mycket vita fläckar, så kallad stenpest på dina stenplattor ordnar ALGRENT PROFFS även detta.
                         <br>
-                        Produkten kan användas på målad och omålad träfasad samt tegel- och puts fasad.
+                        Produkten kan användas på marksten i betong, granit och skiffer, marktegel, natursten och
+                        granitkeramik.
                     </div>
                 </div>
 
@@ -310,29 +308,13 @@
                 </div>
 
                 <div class="containerTxt">
-                    <div class="SemiheaderFPage">Rengör dina utemöbler på djupet.</div>
-                    <div class="brödTxt">Algrent är perfekt för att rengöra utemöbler och neutraliserar algerna i alla
-                        skrymslen. Bara spruta på blandningen och låt den verkar i 24 timmar. Spolar därefter av
-                        möblerna med en vattenslang.
+                    <div class="SemiheaderFPage">Dina vindskivor och snickerier kommer bli vita igen</div>
+                    <div class="brödTxt">Svartmögel är den vanligaste påväxten på vindskivor och snickerier. Sitter
+                        svartmöglet länge, ”kryper” det in i färgskiktet och är svårt att få bort. Men med ALGRENT
+                        PROFFS tar effektivt bort svartmöglet.
                         <br>
-                        Produkten kan användas på utemöbler i trä, rotting, plast, metall samt olika typer av
-                        teakmaterial. Fungera både på obehandlad, oljebehandlade eller målade utemöbler.
+                        Du kan använda produkten på målat och omålat trä, målad plåt och plast.
                     </div>
-                </div>
-            </div>
-
-            <div class="containerInfo">
-                <div class="containerTxt">
-                    <div class="SemiheaderFPage">Algrent får ditt båtkapell rent.</div>
-                    <div class="brödTxt">Algrent tar effektivt bort alger och mögel på ditt båtkapell. Eftersom medlet
-                        trängen ner i väven och neutraliserar påväxten på djupet får du ett rent kapell under många år.
-                        <br>
-                        Produkten kan användas både på kapell i akryl- och bomullsväv.
-                    </div>
-                </div>
-
-                <div class="MellanstoraBilder">
-                    <img class="scroll-reveal" src="./img/snubbe.png" alt="">
                 </div>
             </div>
 
