--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <main>
         <div id="startingPage">
             <div id="startImg">
-                <img src="./img/frontPageImg.png" alt="">
+                <img src="./img/Altanbild_6_Desktop.webp" alt="">
+                <p>RENGÖR EFFEKTIVT MED ALGRENT - FÖR PROFFS</p>
             </div>
 
             <div id="infoFrontPage">
@@ -131,7 +132,7 @@
                 <div id="TopRightDiv">
                     <div id="titelProduct">
                         <h1> Algrent Proffs </h1>
-                        <p>Pris: 500kr</p>
+                        <p>Pris: 1000kr</p>
                     </div>
                     <div id="produktFakta">
                         <h1>Snabb Produktfakta</h1>
