--- a/index.html
+++ b/index.html
@@ -320,8 +320,9 @@
             </div>
 
             <div id="containerProdukt">
-
-
+                <div class="menuItem">
+                    <div id="FormBottomBtn" class="dropDownMenu">Beställ</div>
+                </div>
             </div>
 
         </div>
@@ -336,6 +337,7 @@
 <script>
     emailjs.init(''); // Ersätt med din EmailJS user ID
     document.getElementById("Form").addEventListener("click", orderPage);
+    document.getElementById("FormBottomBtn").addEventListener("click", orderPage);
 </script>
 <script></script>
 
