--- a/index.html
+++ b/index.html
@@ -320,14 +320,17 @@
             </div>
 
             <div id="containerProdukt">
-
+                
 
             </div>
 
         </div>
     </main>
     <footer>
-
+        <div class="contact">Kontakta oss
+            <p>Email: b2balgrent.com</p>
+            <p>Telefon: +46 72-888 02 53</p>
+        </div>
     </footer>
 
 </body>
