--- a/index.html
+++ b/index.html
@@ -330,7 +330,8 @@
         </div>
     </main>
     <footer>
-        <div class="contact">Kontakta oss
+        <div class="contact">
+            <p>Kontakta oss</p>
             <p>Email: b2balgrent.com</p>
             <p>Telefon: +46 72-888 02 53</p>
         </div>
