Pris uppdatering fixad

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
 
             <div id="infoFrontPage">
-                Vi är ett Svenskt företag med rötter i skåne som brinner för algbekämpning, läs mer om våra produkter
+                Vi är ett svenskt företag med rötter i Skåne som brinner för algbekämpning, läs mer om våra produkter
                 nedan
             </div>
 
