--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 
 
                 <div class="menuItem">
-                    <div id="FormBottomBtn" class="dropDownMenu">Beställ</div>
+                    <div id="FormBottomBtn" class="dropDownMenu">Gå till beställ </div>
                 </div>
             </div>
 
