--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div id="startingPage">
             <div id="startImg">
                 <img src="./img/Altanbild_6_Desktop.webp" alt="">
-                <p>RENGÖR EFFEKTIVT MED ALGRENT - FÖR PROFFS</p>
+                <p>RENGÖR EFFEKTIVT MED ALGRENT - <span>FÖR PROFFS</span></p>
             </div>
 
             <div id="infoFrontPage">
@@ -323,7 +323,9 @@
 
 
                 <div class="menuItem">
-                    <div id="FormBottomBtn" class="dropDownMenu">Beställ</div>
+                    <div id="FormBottomBtn" class="dropDownMenu">Gå till Beställ →
+
+                    </div>
                 </div>
             </div>
 
