--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div id="startingPage">
             <div id="startImg">
                 <img src="./img/Altanbild_6_Desktop.webp" alt="">
-                <p>RENGÖR EFFEKTIVT MED ALGRENT - <span>FÖR PROFFS</span></p>
+                <p>RENGÖR EFFEKTIVT MED ALGRENT - FÖR PROFFS</p>
             </div>
 
             <div id="infoFrontPage">
