--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header id="menu">
         <a href="https://www.algrentb2b.com">
-            <img src="../Algrent/img/logoAlgrent.webp" alt="" id="logoAlgrent">
+            <img src="https://algrentb2b.com/Logo_9_Algrent_dee71125-f6a8-43ed-9e69-97bd89fdfa9c-removebg-preview.png" alt="" id="logoAlgrent">
         </a>
         <div class="menuItem">
             <div class="dropDownMenu" id="Form">Beställ</div>
@@ -24,7 +24,7 @@
     <main>
         <div id="startingPage">
             <div id="startImg">
-                <img src="./img/Altanbild_6_Desktop.webp" alt="">
+                <img src="https://algrentb2b.com/Altanbild_6_Desktop.webp" alt="">
                 <p>RENGÖR EFFEKTIVT MED ALGRENT - FÖR PROFFS</p>
             </div>
 
@@ -127,7 +127,7 @@
 
             <div id="containerTopProdukt">
                 <div id="imgDiv">
-                    <img class="scroll-reveal" src="./img/image0.jpeg" alt="">
+                    <img class="scroll-reveal" src="https://algrentb2b.com/image0.jpeg" alt="">
                 </div>
                 <div id="TopRightDiv">
                     <div id="titelProduct">
@@ -155,8 +155,6 @@
             <div id="containerFaktaAlgrent">
                 <div class="faktaRutor">
                     <div class="faqItem">
-                        <!-- Vänsterkolumn -->
-
                         <div class="headerFaktaRutor">Fakta & Säkerhetsblad</div>
                         <div class="faktaBrödTxt">
                             En produkt för effektiv sanering av alger, lavar och mögel.
@@ -168,9 +166,6 @@
                             <div>Läs mer om fakta</div>
                             <div class="faqIcon">+</div>
                         </div>
-
-
-                        <!-- Högerkolumn -->
                     </div>
                     <div class="faqAnswer">
                         Blandningen kan användas på de flesta material som trä, betong, sten, tegel, puts,
@@ -267,13 +262,13 @@
                 </div>
 
                 <div class="MellanstoraBilder">
-                    <img class="scroll-reveal" src="./img/Tak_med_mossa_1_rektang.webp" alt="">
+                    <img class="scroll-reveal" src="https://algrentb2b.com/Tak_med_mossa_1_rektang.webp" alt="">
                 </div>
             </div>
 
             <div class="containerInfo">
                 <div class="MellanstoraBilder">
-                    <img class="scroll-reveal" src="./img/fasad_jamforelse_rektang.webp" alt="">
+                    <img class="scroll-reveal" src="https://algrentb2b.com/fasad_jamforelse_rektang.webp" alt="">
                 </div>
 
                 <div class="containerTxt">
@@ -299,13 +294,13 @@
                 </div>
 
                 <div class="MellanstoraBilder">
-                    <img class="scroll-reveal" src="./img/Marksten_10_rektang.webp" alt="">
+                    <img class="scroll-reveal" src="https://algrentb2b.com/Marksten_10_rektang.webp" alt="">
                 </div>
             </div>
 
             <div class="containerInfo">
                 <div class="MellanstoraBilder">
-                    <img class="scroll-reveal" src="./img/vindskiva_1_rektang.webp" alt="">
+                    <img class="scroll-reveal" src="https://algrentb2b.com/vindskiva_1_rektang.webp" alt="">
                 </div>
 
                 <div class="containerTxt">
@@ -320,8 +315,6 @@
             </div>
 
             <div id="containerProdukt">
-
-
                 <div class="menuItem">
                     <div id="FormBottomBtn" class="dropDownMenu">Gå till Beställ →
 
