--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
                         </div>
                         <div class="dropDownFact">
                             <div>Läs mer om fakta</div>
+                            <div class="faqIcon">+</div>
                             
                         </div>
                     </div>
