--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
     <footer>
         <div class="contact">
             <p>Kontakta oss</p>
-            <p>Email: b2balgrent.com</p>
+            <p>Email: b2b@algrent.com</p>
             <p>Telefon: +46 72-888 02 53</p>
         </div>
     </footer>
@@ -337,7 +337,7 @@
 <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 <script src="index.js"></script>
 <script>
-    emailjs.init(''); // Ersätt med din EmailJS user ID
+    emailjs.init('DH2XBsKOv_qgq5mb9'); // Ersätt med din EmailJS user ID
     document.getElementById("Form").addEventListener("click", e => {
         orderPage(false);
     });
